# myproject

./: .pre-commit-config.yaml  Dockerfile  pyproject.toml
.github/workflows/: build.yaml  docker.yaml  tests.yaml
src/myproject/: task.py
